爬取了Overall Rating，Potential，未爬取欧元符号

--- a/sofifa.ipynb
+++ b/sofifa.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "d6467726",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
@@ -75,12 +76,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "43f03fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://sofifa.com/player/189358/shinji-kagawa/230004/'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "athlete_link = athlete_links[0]"
+    "athlete_link = athlete_links[0]\n",
+    "athlete_link"
    ]
   },
   {
@@ -103,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a75b41f9",
    "metadata": {},
    "outputs": [],
@@ -113,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "4cdff658",
    "metadata": {},
    "outputs": [],
@@ -123,20 +136,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
+   "id": "a433cb70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72 Overall Rating\n",
+      "72 Potential\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'group'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-c9e35ff08df6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmacth_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\".+>([A-Za-z]+\\s?[A-Za-z]+?)<\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscoal_value_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatch_number\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscoal_value_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mnum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmacth_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscoal_value_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'group'"
+     ]
+    }
+   ],
+   "source": [
+    "match_number = \".+>([\\d]+)<\"\n",
+    "macth_name = \".+>([A-Za-z]+\\s?[A-Za-z]+?)<\"\n",
+    "for i in range(len(scoal_value_data)):\n",
+    "    name = re.match(match_number, str(scoal_value_data[i])).group(1)\n",
+    "    num = re.match(macth_name, str(scoal_value_data[i])).group(1)\n",
+    "    print(name, num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "ef6e8af9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<div class=\"block-quarter\"><div><span class=\"bp3-tag p p-66\">66</span> <div class=\"sub\">Overall Rating</div></div></div>,\n",
-       " <div class=\"block-quarter\"><div><span class=\"bp3-tag p p-75\">75</span> <div class=\"sub\">Potential</div></div></div>,\n",
-       " <div class=\"block-quarter\"><div>€1.9M<div class=\"sub\">Value</div></div></div>,\n",
-       " <div class=\"block-quarter\"><div>€6K<div class=\"sub\">Wage</div></div></div>]"
+       "[<div class=\"block-quarter\"><div><span class=\"bp3-tag p p-72\">72</span> <div class=\"sub\">Overall Rating</div></div></div>,\n",
+       " <div class=\"block-quarter\"><div><span class=\"bp3-tag p p-72\">72</span> <div class=\"sub\">Potential</div></div></div>,\n",
+       " <div class=\"block-quarter\"><div>€1.5M<div class=\"sub\">Value</div></div></div>,\n",
+       " <div class=\"block-quarter\"><div>€11K<div class=\"sub\">Wage</div></div></div>]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,126 +195,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "id": "a2641c84",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"block-quarter\"><div><span class=\"bp3-tag p p-66\">66</span> <div class=\"sub\">Overall Rating</div></div></div>"
+       "'<div class=\"block-quarter\"><div>€11K<div class=\"sub\">Wage</div></div></div>'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scoal_value_data[0]"
+    "a = str(scoal_value_data[3])\n",
+    "str(scoal_value_data[3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "fc7773aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "match_number = \".+(€)\"\n",
+    "r = re.match(match_number, a).group(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "51467b96",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Season</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>Last Appearance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022/2023</td>\n",
-       "      <td>Holstein Kiel</td>\n",
-       "      <td>FIFA 23 Oct 7, 2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021/2022</td>\n",
-       "      <td>Holstein Kiel</td>\n",
-       "      <td>FIFA 22 Aug 18, 2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020/2021</td>\n",
-       "      <td>FC Bayern München II</td>\n",
-       "      <td>FIFA 21 Sep 25, 2021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020/2021</td>\n",
-       "      <td>FC Bayern München</td>\n",
-       "      <td>FIFA 21 Aug 24, 2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2019/2020</td>\n",
-       "      <td>FC Bayern München</td>\n",
-       "      <td>FIFA 20 Sep 23, 2020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2018/2019</td>\n",
-       "      <td>Hamburger SV</td>\n",
-       "      <td>FIFA 19 Sep 11, 2019</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2017/2018</td>\n",
-       "      <td>Hamburger SV</td>\n",
-       "      <td>FIFA 18 Sep 12, 2018</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      Season                  Team       Last Appearance\n",
-       "0  2022/2023         Holstein Kiel   FIFA 23 Oct 7, 2022\n",
-       "1  2021/2022         Holstein Kiel  FIFA 22 Aug 18, 2022\n",
-       "2  2020/2021  FC Bayern München II  FIFA 21 Sep 25, 2021\n",
-       "3  2020/2021     FC Bayern München  FIFA 21 Aug 24, 2020\n",
-       "4  2019/2020     FC Bayern München  FIFA 20 Sep 23, 2020\n",
-       "5  2018/2019          Hamburger SV  FIFA 19 Sep 11, 2019\n",
-       "6  2017/2018          Hamburger SV  FIFA 18 Sep 12, 2018"
+       "'€'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3d80f756",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "macth_name = \".+>([A-Za-z]+\\s?[A-Za-z]+?)<\"\n",
+    "m = re.match(macth_name, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "64a139c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Overall Rating'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.group(1)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5df2c3f9",
+   "id": "daab8dec",
    "metadata": {},
    "outputs": [],
    "source": []
