--- a/sofifa.ipynb
+++ b/sofifa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "id": "d6467726",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "id": "2a78fb08",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "id": "7dacbaea",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "id": "6002fc0b",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "id": "35cc4632",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 82,
    "id": "172871c2",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "id": "0984f05f",
    "metadata": {},
    "outputs": [],
@@ -76,17 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 84,
    "id": "43f03fd0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://sofifa.com/player/189358/shinji-kagawa/230004/'"
+       "'https://sofifa.com/player/268421/mathys-tel/230005/'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,12 +101,12 @@
    "id": "156b6013",
    "metadata": {},
    "source": [
-    "开始爬取运动员页面，例如，https://sofifa.com/player/239981/jann-fiete-arp/230004/"
+    "开始爬取运动员页面，例如，https://sofifa.com/player/268421/mathys-tel/230005/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "id": "3c8f14e9",
    "metadata": {},
    "outputs": [],
@@ -116,173 +116,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 152,
    "id": "a75b41f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "athlete_soup = BeautifulSoup(athlete_data.text)"
+    "athlete_soup = BeautifulSoup(athlete_data.text)\n",
+    "# overall_rating, potential, value, wage\n",
+    "name_list = [\"overall_rating\", \"potential\", \"value\", \"wage\"]\n",
+    "data_list = list(range(len(name_list)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4cdff658",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scoal_value_data = athlete_soup.select(\"body > div:nth-child(5) > div > div.col.col-12 > div.bp3-card.player > section\")[0].find_all(\"div\", {\"class\": \"block-quarter\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "a433cb70",
+   "execution_count": 158,
+   "id": "2ce223e1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "72 Overall Rating\n",
-      "72 Potential\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'group'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-c9e35ff08df6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmacth_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\".+>([A-Za-z]+\\s?[A-Za-z]+?)<\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscoal_value_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatch_number\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscoal_value_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mnum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmacth_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscoal_value_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'group'"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "match_number = \".+>([\\d]+)<\"\n",
-    "macth_name = \".+>([A-Za-z]+\\s?[A-Za-z]+?)<\"\n",
-    "for i in range(len(scoal_value_data)):\n",
-    "    name = re.match(match_number, str(scoal_value_data[i])).group(1)\n",
-    "    num = re.match(macth_name, str(scoal_value_data[i])).group(1)\n",
-    "    print(name, num)"
+    "# overall rating \n",
+    "overall_rating = athlete_soup.select(\"#body > div:nth-child(5) > div > div.col.col-12 > div.bp3-card.player > section > div:nth-child(1) > div > span\")\n",
+    "overall_rating_data = overall_rating[0].string\n",
+    "data_list[0] = int(overall_rating_data)\n",
+    "\n",
+    "# potential\n",
+    "potential = athlete_soup.select(\"#body > div:nth-child(5) > div > div.col.col-12 > div.bp3-card.player > section > div:nth-child(2) > div > span\")\n",
+    "potential_data = potential[0].string\n",
+    "potential_data\n",
+    "data_list[1] = int(potential_data)\n",
+    "\n",
+    "#Value\n",
+    "value = athlete_soup.select(\"#body > div:nth-child(5) > div > div.col.col-12 > div.bp3-card.player > section > div:nth-child(3) > div\")\n",
+    "value_data = str(value[0])\n",
+    "value_re = re.findall(\"(\\d+\\.?\\d*)([MK])\", value_data)\n",
+    "value_num = value_re[0][0]\n",
+    "value_unit = value_re[0][1]\n",
+    "if value_unit == \"M\":\n",
+    "    data_list[2] = (float(value_num)*10**6)\n",
+    "elif value_unit == \"K\":\n",
+    "    data_list[2] = (float(value_num*10**3))\n",
+    "else:\n",
+    "    print(\"clawer value failed.\")\n",
+    "\n",
+    "# Wage\n",
+    "wage = athlete_soup.select(\"#body > div:nth-child(5) > div > div.col.col-12 > div.bp3-card.player > section > div:nth-child(4)\")\n",
+    "wage_data = str(wage[0])\n",
+    "wage_re = re.findall(\"(\\d+\\.?\\d*)([MK])\", wage_data)\n",
+    "wage_num = wage_re[0][0]\n",
+    "wage_unit = wage_re[0][1]\n",
+    "if wage_unit == \"M\":\n",
+    "    data_list[3] = (float(wage_num)*10**6)\n",
+    "elif wage_unit == \"K\":\n",
+    "    data_list[3] = (float(wage_num)*10**3)\n",
+    "else:\n",
+    "    print(\"clawer value failed.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ef6e8af9",
+   "execution_count": 162,
+   "id": "c74b4df3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<div class=\"block-quarter\"><div><span class=\"bp3-tag p p-72\">72</span> <div class=\"sub\">Overall Rating</div></div></div>,\n",
-       " <div class=\"block-quarter\"><div><span class=\"bp3-tag p p-72\">72</span> <div class=\"sub\">Potential</div></div></div>,\n",
-       " <div class=\"block-quarter\"><div>€1.5M<div class=\"sub\">Value</div></div></div>,\n",
-       " <div class=\"block-quarter\"><div>€11K<div class=\"sub\">Wage</div></div></div>]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[64, 84, 1600000.0, 2000.0]\n",
+      "['overall_rating', 'potential', 'value', 'wage']\n"
+     ]
     }
    ],
    "source": [
-    "scoal_value_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "a2641c84",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<div class=\"block-quarter\"><div>€11K<div class=\"sub\">Wage</div></div></div>'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = str(scoal_value_data[3])\n",
-    "str(scoal_value_data[3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "fc7773aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "match_number = \".+(€)\"\n",
-    "r = re.match(match_number, a).group(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "51467b96",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'€'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "3d80f756",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "macth_name = \".+>([A-Za-z]+\\s?[A-Za-z]+?)<\"\n",
-    "m = re.match(macth_name, a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "64a139c5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Overall Rating'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m.group(1)"
+    "print(data_list)\n",
+    "print(name_list)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daab8dec",
+   "id": "31ea3ba1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -290,7 +211,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -305,6 +226,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3b6d5b87a7f66fd342792060d1484a61d0f1b5d1b520616f5a1f779c6e9c2878"
+   }
   }
  },
  "nbformat": 4,
