clean data, draw pictures to show relationship between factors.

--- a/data_clean.ipynb
+++ b/data_clean.ipynb
@@ -2,25 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ipt = \"./data_50/\"\n",
-    "data = []\n",
-    "for file in os.listdir(ipt):\n",
-    "    frame_page = pd.read_csv(ipt + file)\n",
-    "    data.append(frame_page)"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -29,16 +16,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = pd.concat(data)"
+    "data = pd.read_csv(\"./raw_data/raw_data.csv\")\n",
+    "data.replace([np.inf, -np.inf, 0], np.nan, inplace=True)\n",
+    "data.dropna(inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.to_csv(\"./raw_data/raw_data.csv\")"
+    "data.to_csv(\"./raw_data/cleaned_data.csv\")\n"
    ]
   },
   {
