整理了各个脚本，如果需要复现，需要在打开脚本改一下里面的路径。

--- a/dealdata/merge_pages.ipynb
+++ b/dealdata/merge_pages.ipynb
@@ -20,7 +20,9 @@
     "data = []\n",
     "for file in os.listdir(ipt):\n",
     "    frame_page = pd.read_csv(ipt + file)\n",
-    "    data.append(frame_page)"
+    "    data.append(frame_page)\n",
+    "result = pd.concat(data)\n",
+    "result.to_csv(\"./raw_data/raw_data.csv\")"
    ]
   },
   {
@@ -28,18 +30,14 @@
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "result = pd.concat(data)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "result.to_csv(\"./raw_data/raw_data.csv\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
