--- a/dealdata/search_model.ipynb
+++ b/dealdata/search_model.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn import linear_model\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -17,23 +18,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Crossing', 'Finishing', 'Heading_Accuracy', 'Short_Passing', 'Volleys', 'Dribbling', 'Curve', 'FK_Accuracy', 'Long_Passing', 'Ball_Control', 'Acceleration', 'Sprint_Speed', 'Agility', 'Reactions', 'Balance', 'Shot_Power', 'Jumping', 'Stamina', 'Strength', 'Long_Shots', 'Aggression', 'Interceptions', 'Positioning', 'Vision', 'Penalties', 'Composure', 'Defensive_Awareness']\n"
+      "['Finishing', 'Short_Passing', 'Dribbling', 'Long_Passing', 'Ball_Control', 'Acceleration', 'Sprint_Speed', 'Reactions', 'Balance', 'Shot_Power', 'Stamina', 'Strength', 'Aggression', 'Vision', 'Penalties', 'Standing_Tackle', 'Sliding_Tackle']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "27"
+       "17"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,13 +42,19 @@
    "source": [
     "# 读取player 的数据\n",
     "player = pd.read_csv(\"../datafrom200/players.csv\")\n",
-    "x_list = player.columns[7:-5]\n",
-    "x_list = ['Crossing', 'Finishing', 'Heading_Accuracy', 'Short_Passing', 'Volleys',\n",
-    "       'Dribbling', 'Curve', 'FK_Accuracy', 'Long_Passing', 'Ball_Control',\n",
-    "       'Acceleration', 'Sprint_Speed', 'Agility', 'Reactions', 'Balance',\n",
-    "       'Shot_Power', 'Jumping', 'Stamina', 'Strength', 'Long_Shots',\n",
-    "       'Aggression', 'Interceptions', 'Positioning', 'Vision', 'Penalties',\n",
-    "       'Composure', 'Defensive_Awareness']\n",
+    "# x_list = player.columns[7:-5]\n",
+    "# x_list = ['Crossing', 'Finishing', 'Heading_Accuracy', 'Short_Passing', 'Volleys',\n",
+    "#        'Dribbling', 'Curve', 'FK_Accuracy', 'Long_Passing', 'Ball_Control',\n",
+    "#        'Acceleration', 'Sprint_Speed', 'Agility', 'Reactions', 'Balance',\n",
+    "#        'Shot_Power', 'Jumping', 'Stamina', 'Strength', 'Long_Shots',\n",
+    "#        'Aggression', 'Interceptions', 'Positioning', 'Vision', 'Penalties',\n",
+    "#        'Composure', 'Defensive_Awareness']\n",
+    "# x_list = ['Ball_Control', 'Sprint_Speed', 'Reactions', 'Stamina', 'Composure',\n",
+    "#        'Standing_Tackle', 'Sliding_Tackle']  # xgboost feature selection\n",
+    "x_list = ['Finishing', 'Short_Passing', 'Dribbling', 'Long_Passing',\n",
+    "       'Ball_Control', 'Acceleration', 'Sprint_Speed', 'Reactions', 'Balance',\n",
+    "       'Shot_Power', 'Stamina', 'Strength', 'Aggression', 'Vision',\n",
+    "       'Penalties', 'Standing_Tackle', 'Sliding_Tackle']  # random forest auto - feature selection\n",
     "print(x_list)\n",
     "X = player[x_list]\n",
     "y = player[\"value\"]\n",
@@ -56,13 +63,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 划分训练集 train, validation, test : 0.7, 0.15, 0.15\n",
-    "X_train, X_test_val, y_train, y_test_val = train_test_split(X, y, test_size=0.3, random_state=21)\n",
-    "X_validation, X_test, y_validation, y_test = train_test_split(X_test_val, y_test_val, test_size=0.5, random_state=23)"
+    "# 划分训练集 train, test : 0.8, 0.2\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=21)\n",
+    "# X_validation, X_test, y_validation, y_test = train_test_split(X_test_val, y_test_val, test_size=0.5, random_state=23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1\n",
+      "0.2\n",
+      "0.30000000000000004\n",
+      "0.4\n",
+      "0.5\n",
+      "0.6\n",
+      "0.7000000000000001\n",
+      "0.8\n",
+      "0.9\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in np.arange(0.1, 1.1, 0.1):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'numpy' has no attribute 'range'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3882/684270714.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mXGBRFRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m params = {'learning_rate': [1e-5, 1e-4, 1e-3, 1e-2, 1e-1], 'max_depth': np.range(3, 15, 2),\n\u001b[0m\u001b[1;32m      5\u001b[0m           \u001b[0;34m\"min_child_weight\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m           \u001b[0;34m\"n_estimators\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3/dist-packages/numpy/__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    311\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mTester\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    312\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 313\u001b[0;31m             raise AttributeError(\"module {!r} has no attribute \"\n\u001b[0m\u001b[1;32m    314\u001b[0m                                  \"{!r}\".format(__name__, attr))\n\u001b[1;32m    315\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'range'"
+     ]
+    }
+   ],
+   "source": [
+    "# XGBoost\n",
+    "import xgboost as xgb\n",
+    "model = xgb.XGBRFRegressor()\n",
+    "params = {'learning_rate': [1e-5, 1e-4, 1e-3, 1e-2, 1e-1], 'max_depth': np.range(3, 15, 2),\n",
+    "          \"min_child_weight\": np.range(3, 15, 2), \n",
+    "          \"n_estimators\": np.range(100, 1000, 100),\n",
+    "          \"subsample\": np.range(0.7, 1, 0.05)}\n",
+    "\n",
+    "grid_search = GridSearchCV(model, params, cv=10)\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# 打印最佳参数\n",
+    "print('Best parameters: ', grid_search.best_params_)\n",
+    "print('Best cross-validation score: ', grid_search.best_score_)\n",
+    "\n",
+    "# 使用最优参数在测试集上进行评估\n",
+    "best_model = grid_search.best_estimator_\n",
+    "print('Score on test set: ', best_model.score(X_test, y_test))"
    ]
   },
   {
@@ -189,16 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R 0.9032319116031758\n",
-      "RMSE 2798518.1968447655\n",
-      "MAE 949712.6579044838\n"
+      "R 0.9325484278425888\n",
+      "RMSE 0.1578017645992015\n",
+      "MAE 0.11876732545157705\n"
      ]
     }
    ],
